--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -32,7 +32,7 @@
   --color-redish-500: #eef56f;
 }
 
-/* @layer components {
+ @layer components {
   .spinner {
     margin: 3.2rem auto 1.6rem;
     width: 60px;
@@ -59,12 +59,12 @@
     }
   }
 }
-*/
+
 /* For data picker */
-/*
+
 .rdp {
   --rdp-cell-size: 32px !important;
   --rdp-accent-color: theme('colors.accent.500') !important;
   --rdp-background-color: theme('colors.accent.600') !important;
   margin: 0 !important;
-} */
+} 
